--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
-  "homepage": "https://sdanieau.github.io/ubersd",
+  "homepage": "https://sdanieau.github.io/",
   
   "scripts": {
     "predeploy": "npm run build",
