--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ubersd",
+  "name": "ultimatesdguide",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +14,7 @@
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1"
   },
-  "homepage": "https://sdanieau.github.io/ubersd",
+  "homepage": "http://ultimatesdguide.com",
   
   "scripts": {
     "predeploy": "npm run build",
